@@ -4,7 +4,8 @@ complete changelog, see https://github.com/JolleJolles/pythutils/commits/
 Not yet integrated
     * Added get_spaced_colors function for getting a list of equally spaced
       colors on the color spectrum
-    * Added function to draw increasing bi-coloured circles at a point
+    * Added function to draw bi-coloured circles of increasing size on an image
+    * Added function to draw a dotted or dashed line on an image
 
 2019-12-24 - version 1.1.5
     * roi_to_zoom function now rounds the zoom values
